<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:toots="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/kmz_eeeeee"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/kmz_f5f5f5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:visibility="visible"
                android:background="@drawable/item_border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_auto_play"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/auto_play_setting"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_play_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:text="关闭"
                    android:textColor="@color/kmz_7b7b7b"
                    android:textSize="16sp"
                    android:typeface="normal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/item_border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_msg_push_kmz"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/message_push_setting_kuaimeizhuang"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/iv_arrow"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/item_border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_clear_cache"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/clear_cache"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/kmz_7b7b7b"
                    android:textSize="16sp"
                    android:typeface="normal"
                    tools:text="10.9M"/>

            </LinearLayout>



            <LinearLayout
                android:id="@+id/ll_version_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/item_border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_version_updata"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/version_updata"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_is_new_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    tools:text="已经是最新版本"
                    android:textColor="@color/kmz_7b7b7b"
                    android:textSize="16sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/iv_arrow"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_exit_account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:background="@drawable/btn_red_selector"
                android:gravity="center"
                android:text="@string/exit_account"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible"/>

        </LinearLayout>
    </LinearLayout>
</layout>
