<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="user"
            type="com.kuaimeizhuang.fashionmix.bean.User"/>

        <variable
            name="uiutils"
            type="com.kuaimeizhuang.fashionmix.utils.UiUtils"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:id="@+id/iv_blurImageUrl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_user_head"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/loading_head_153_153"
                    app:circleImageUrl="@{user.avatar_url}"
                    app:civ_border_color="#88ffffff"
                    app:civ_border_width="2dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/user_home_cloud"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@{user.nickname}"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:text="Sira我是喵总"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="35dp"
                        android:visibility="gone"
                        android:text="@{user.level_name}"
                        android:textColor="@color/kmz_7b7b7b"
                        android:textSize="14sp"
                        tools:text="时尚达人"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/kmz_eff0f5"/>

        <LinearLayout
            android:id="@+id/ll_my_user_message"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/iv_user_message"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="18dp"
                android:text="@string/my_message"
                android:textColor="@color/kmz_3e3e3e"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/iv_arrow"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/kmz_eff0f5"/>


        <LinearLayout
            android:id="@+id/ll_my_user_like"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/iv_user_like"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_like"
                android:layout_marginLeft="18dp"
                android:textColor="@color/kmz_3e3e3e"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/iv_arrow"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/kmz_eff0f5"/>


        <LinearLayout
            android:id="@+id/ll_my_user_attention"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/iv_user_attention"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_attention"
                android:layout_marginLeft="18dp"
                android:textColor="@color/kmz_3e3e3e"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/iv_arrow"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/kmz_eff0f5"/>

        <LinearLayout
            android:id="@+id/ll_my_user_feedback"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:src="@drawable/iv_user_feedback"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_feedback"
                android:layout_marginLeft="18dp"
                android:textColor="@color/kmz_3e3e3e"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/iv_arrow"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/kmz_eff0f5"/>


        <LinearLayout
            android:id="@+id/ll_my_user_share"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@drawable/iv_user_share"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_share"
                android:layout_marginLeft="19dp"
                android:textColor="@color/kmz_3e3e3e"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/iv_arrow"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/kmz_eff0f5"/>

        <LinearLayout
            android:id="@+id/ll_my_user_setting"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:src="@drawable/iv_user_setting"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_setting"
                android:layout_marginLeft="18dp"
                android:textColor="@color/kmz_3e3e3e"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/iv_arrow"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/kmz_eff0f5"/>

    </LinearLayout>
</layout>
